tests/baselines/reference/derivedClassOverridesPublicMembers.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts(7,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts(8,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts(13,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts(14,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts(23,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts(24,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts(29,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts(30,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesPublicMembers.ts (8 errors) ====
    var x: { foo: string; }
    var y: { foo: string; bar: string; }
    
    class Base {
        a: typeof x;
        b(a: typeof x) { }
        get c() { return x; }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        set c(v: typeof x) { }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        d: (a: typeof x) => void;
    
        static r: typeof x;
        static s(a: typeof x) { }
        static get t() { return x; }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static set t(v: typeof x) { }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static u: (a: typeof x) => void;
    
        constructor(a: typeof x) { }
    }
    
    class Derived extends Base {
        a: typeof y;
        b(a: typeof y) { }
        get c() { return y; }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        set c(v: typeof y) { }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        d: (a: typeof y) => void;
    
        static r: typeof y;
        static s(a: typeof y) { }
        static get t() { return y; }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static set t(a: typeof y) { }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static u: (a: typeof y) => void;
    
        constructor(a: typeof y) { super(x) }
    }
    
    var d: Derived = new Derived(y);
    var r1 = d.a;
    var r2 = d.b(y);
    var r3 = d.c;
    var r3a = d.d;
    d.c = y;
    var r4 = Derived.r;
    var r5 = Derived.s(y);
    var r6 = Derived.t;
    var r6a = Derived.u;
    Derived.t = y;
    
    class Base2 {
        [i: string]: Object;
        [i: number]: typeof x;
    }
    
    class Derived2 extends Base2 {
        [i: string]: typeof x;
        [i: number]: typeof y;
    }
    
    var d2: Derived2;
    var r7 = d2[''];
    var r8 = d2[1];
    
    